removed IG links and modified container bg for desktop

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
             <!-- Action links -->
             <div class="nav__action__links flex items-center font-medium tracking-tight">
                 <a href="mailto:danieladeofficial@gmail.com" class="email clr-white bg-first text-xs flex items-center justify-center w-20 h-10 rounded-full mr-2 p-2">
-                    <i class="ri-mail-send-line mr-2"></i>
+                    <!-- <i class="ri-mail-send-line mr-2"></i> -->
                     <span>Email</span>
                 </a>
                 <a href="https://buymeacoffee.com/heisdanielade" target="_blank" id="buymeacoffee" class="buymeacoffee text-xs flex items-center justify-center w-12 h-11 font-extrabold"> 
@@ -58,15 +58,15 @@
                 <div class="mobile hidden items-center text-xl">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex clr-first bg-whitec items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
                     <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex clr-first bg-whitec items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
-                    <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex clr-first bg-whitec items-center justify-center w-[2.825rem] h-[2.825rem] rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
+                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex clr-first bg-whitec items-center justify-center w-[2.825rem] h-[2.825rem] rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a> -->
                 </div>
                 <!-- desktop -->
                 <div class="desktop clr-first text-sm">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">LinkedIn</a>
                     <span class="slash font-bold ml-1 mr-1">/</span>
                     <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Stack Overflow</a>
-                    <span class="slash font-bold ml-1 mr-1">/</span>
-                    <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Instagram</a>
+                    <!-- <span class="slash font-bold ml-1 mr-1">/</span> -->
+                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Instagram</a> -->
                 </div>
             </div>
         </nav>
@@ -375,7 +375,7 @@
                 <div class="socials flex items-center justify-center text-xl">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="clr-first flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
                     <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="clr-first flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-stack-overflow-line"></i></a>
-                    <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="clr-first flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a>
+                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="clr-first flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a> -->
                 </div>
             </div>
          </footer>
