--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
             <!-- Action links -->
             <div class="nav__action__links flex items-center font-medium tracking-tight">
                 <a href="mailto:danieladeofficial@gmail.com" class="email clr-white bg-first text-xs flex items-center justify-center w-20 h-10 rounded-full mr-2 p-2">
-                    <!-- <i class="ri-mail-send-line mr-2"></i> -->
+                    <i class="ri-mail-send-line mr-2"></i>
                     <span>Email</span>
                 </a>
                 <a href="https://buymeacoffee.com/heisdanielade" target="_blank" id="buymeacoffee" class="buymeacoffee text-xs flex items-center justify-center w-12 h-11 font-extrabold"> 
