added spoken languages -2

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
  <div id="page" class="page">
 
     <!--====== PAGE LOADER ======-->
-    <div id="page-loader" class="page-loader fixed flex items-center justify-center top-0 left-0 z-50 h-screen w-full">
+    <div id="page-loader" class="page-loader fixed hidden items-center justify-center top-0 left-0 z-50 h-screen w-full">
 
         <svg width="400" height="100" xmlns="http://www.w3.org/2000/svg">
             <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-family="Protest Guerrilla" font-size="5.25rem" fill="none" stroke="#242424" stroke-width="1.9" class="loader">
@@ -355,8 +355,8 @@
 
 
         <!--====== SPOKEN LANGUAGES ======-->
-        <div id="languages" class="languages">
-            <div class="holder w-fulls flex items-center justify-center cursor-custom">
+        <div id="languages" class="languages mb-10">
+            <div class="holder w-full flex items-center justify-center cursor-custom">
                 <div class="item bg-transparent color-primary flex items-center justify-evenly w-[7.5rem] p-3 m-1 rounded-full">
                     <img class="w-6 h-6 mr-1" src="assets/images/flags/uk.png" alt="Flag">
                     <span class="lang relative text-xs font-semibold">
