--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,13 @@
                 <h1 class="info not-shown text-center text-5xl mt-20">
                     <span class="gradient-text">Crafting digital<br> spaces, products and experiences.</span><span class="hht stroke-text-2 hidden">ces.</span>
                 </h1>
-                <a href="https://github.com/heisdanielade" target="_blank" class="github__link not-shown color-secondary bg-primary flex items-center justify-center mt-12 mb-11 w-44 h-14 rounded-full">
+
+                <div class="location flex items-center justify-center mt-6">
+                     <img src="assets/images/descriptions/location.gif" alt="Location" class="icon w-8 h-8">
+                     <span class="text font-semibold text-sm">Zielona Góra, Poland</span>
+                </div>
+                
+                <a href="https://github.com/heisdanielade" target="_blank" class="github__link not-shown color-secondary bg-primary flex items-center justify-center mt-8 mb-11 w-44 h-14 rounded-full">
                     <span class="font-medium text-xs">GitHub</span>
                     <i class="ri-arrow-right-up-line underline font-light text-sm ml-2"></i>
                 </a>                
@@ -385,7 +391,7 @@
 
             <div class="content flex items-center justify-between w-full">
                 <div class="arr">
-                    <p class="text-sm mt-3 color-primary">
+                    <p class="text-sm font-semibold mt-3 color-primary">
                         &copy; <span id="year"></span>&nbsp;Daniel Adediran
                     </p>
                 </div>
