--- a/public/index.html
+++ b/public/index.html
@@ -365,19 +365,19 @@
             <div class="holder w-full flex items-center justify-center cursor-custom">
                 <div class="item bg-transparent color-primary flex items-center justify-evenly w-[7.5rem] p-3 m-1 rounded-full">
                     <img class="w-6 h-6 mr-1" src="assets/images/flags/uk.png" alt="Flag">
-                    <span class="lang relative text-xs font-semibold">
+                    <span class="lang relative text-xs font-medium">
                         English
                     </span>
                 </div>
                 <div class="item bg-transparent color-primary flex items-center justify-evenly w-[7.5rem] p-3 m-1 rounded-full">
                     <img class="w-6 h-6 mr-1" src="assets/images/flags/9ja.png" alt="Flag">
-                    <span class="lang relative text-xs font-semibold">
+                    <span class="lang relative text-xs font-medium">
                         Yoruba
                     </span>
                 </div>
                 <div class="item bg-transparent color-primary flex items-center justify-evenly w-[7.5rem] p-3 m-1 rounded-full">
                     <img class="w-6 h-6 mr-1" src="assets/images/flags/poland.png" alt="Flag">
-                    <span class="lang relative text-xs font-semibold">
+                    <span class="lang relative text-xs font-medium">
                         Polish
                     </span>
                 </div>
@@ -391,7 +391,7 @@
 
             <div class="content flex items-center justify-between w-full">
                 <div class="arr">
-                    <p class="text-sm font-semibold mt-3 color-primary">
+                    <p class="text-sm font-medium mt-3 color-primary">
                         &copy; <span id="year"></span>&nbsp;Daniel Adediran
                     </p>
                 </div>
