--- a/public/index.html
+++ b/public/index.html
@@ -365,19 +365,19 @@
             <div class="holder w-full flex items-center justify-center cursor-custom">
                 <div class="item bg-transparent color-primary flex items-center justify-evenly w-[7.5rem] p-3 m-1 rounded-full">
                     <img class="w-6 h-6 mr-1" src="assets/images/flags/uk.png" alt="Flag">
-                    <span class="lang relative text-xs font-medium">
+                    <span class="lang relative text-xs font-semibold">
                         English
                     </span>
                 </div>
                 <div class="item bg-transparent color-primary flex items-center justify-evenly w-[7.5rem] p-3 m-1 rounded-full">
                     <img class="w-6 h-6 mr-1" src="assets/images/flags/9ja.png" alt="Flag">
-                    <span class="lang relative text-xs font-medium">
+                    <span class="lang relative text-xs font-semibold">
                         Yoruba
                     </span>
                 </div>
                 <div class="item bg-transparent color-primary flex items-center justify-evenly w-[7.5rem] p-3 m-1 rounded-full">
                     <img class="w-6 h-6 mr-1" src="assets/images/flags/poland.png" alt="Flag">
-                    <span class="lang relative text-xs font-medium">
+                    <span class="lang relative text-xs font-semibold">
                         Polish
                     </span>
                 </div>
