--- a/public/index.html
+++ b/public/index.html
@@ -218,7 +218,7 @@
                             <h3 class="proj-name font-medium mb-1">
                                 Podcast Page
                             </h3>
-                            <div class="proj-stack clr-aqua bottom-4 left-3 font-light">
+                            <div class="proj-stack color-aqua bottom-4 left-3 font-light">
                                 <span class="tech">
                                     HTML
                                 </span>
@@ -242,7 +242,7 @@
                             <h3 class="proj-name font-medium mb-1">
                                 Finance Page
                             </h3>
-                            <div class="proj-stack clr-aqua bottom-4 left-3 font-light">
+                            <div class="proj-stack color-aqua bottom-4 left-3 font-light">
                                 <span class="tech">
                                     HTML
                                 </span>
@@ -269,7 +269,7 @@
                             <h3 class="proj-name font-medium mb-1">
                                 My Portfolio
                             </h3>
-                            <div class="proj-stack clr-aqua bottom-4 left-3 font-light">
+                            <div class="proj-stack color-aqua bottom-4 left-3 font-light">
                                 <span class="tech">
                                     Tailwind CSS
                                 </span>
@@ -293,7 +293,7 @@
                             <h3 class="proj-name font-medium mb-1">
                                 HomeCraft Design
                             </h3>
-                            <div class="proj-stack clr-aqua bottom-4 left-3 font-light">
+                            <div class="proj-stack color-aqua bottom-4 left-3 font-light">
                                 <span class="tech">
                                     Tailwind CSS
                                 </span>
@@ -317,7 +317,7 @@
                             <h3 class="proj-name font-medium mb-1">
                                 VideoChat Design
                             </h3>
-                            <div class="proj-stack clr-aqua bottom-4 left-3 font-light">
+                            <div class="proj-stack color-aqua bottom-4 left-3 font-light">
                                 <span class="tech">
                                     HTML
                                 </span>
