--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-
+ 
  <div id="page" class="page">
 
     <!--====== PAGE LOADER ======-->
@@ -161,7 +161,7 @@
                         <img src="assets/images/descriptions/analytics.gif" alt="Data" class="descriptive-icon w-10 h-10 mb-5">
                         <h2 class="text text-lg font-medium mb-3 color-primary">Data Analysis</h2>
                         <p class="info text-sm color-primary">
-                            Analyses that<br class="text-break hidden"> are insightful and accurate for your needs.
+                            Insightful and accurate analyses for your needs.
                         </p>
                     </div>
                     <div class="box not-shown m-1 w-[15rem]">
@@ -362,7 +362,7 @@
 
         <!--====== SPOKEN LANGUAGES ======-->
         <div id="languages" class="languages mb-10">
-            <div class="holder w-full flex items-center justify-center cursor-custom">
+            <div class="holder not-shown w-full flex items-center justify-center cursor-custom">
                 <div class="item bg-transparent color-primary flex items-center justify-evenly w-[7.5rem] p-3 m-1 rounded-full">
                     <img class="w-6 h-6 mr-1" src="assets/images/flags/uk.png" alt="Flag">
                     <span class="lang relative text-xs font-semibold">
