changed services to skillsets and minor changes across website

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,6 @@
 </head>
 
 <body>
- 
  <div id="page" class="page">
 
     <!--====== PAGE LOADER ======-->
@@ -57,14 +56,16 @@
                 <!-- mobile -->
                 <div class="mobile hidden items-center text-xl">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a>
+                    <a href="https://github.com/heisdanielade" target="_blank" class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-github-line"></i></a>
+                    <!-- <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a> -->
                     <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a> -->
                 </div>
                 <!-- desktop -->
                 <div class="desktop color-primary text-sm">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">LinkedIn</a>
                     <span class="slash font-bold ml-1 mr-1">/</span>
-                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Stack Overflow</a>
+                    <a href="https://github.com/heisdanielade" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">GitHub</a>
+                    <!-- <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Stack Overflow</a> -->
                     <!-- <span class="slash font-bold ml-1 mr-1">/</span> -->
                     <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Instagram</a> -->
                 </div>
@@ -152,7 +153,7 @@
             
             <div class="title-stroke-line not-shown top-[10.75rem] z-10 bg-secondary absolute mb-8 w-[70%] h-[0.0325rem]"></div>
             <span class="title relative z-20 color-primary bg-secondary not-shon text-sm w-28 h-12 font-bold rounded-full mb-9 p-2 -border-[0.25rem] -border-solid flex items-center justify-center">
-                Services
+                Skillset
             </span>
 
             <div class="serv-con mb-8 flex items-center justify-evenly w-full">
@@ -168,23 +169,24 @@
                         <img src="assets/images/descriptions/web.gif" alt="Coding" class="descriptive-icon w-10 h-10 mb-5">
                         <h2 class="text text-lg font-medium mb-3 color-primary">Web Development</h2>
                         <p class="info text-sm color-primary">
-                            Turning concepts into outstanding web app experiences.
+                            Turning concepts into outstanding web apps.
                         </p>
                     </div>
                 </div>
                 <div class="con-2 flex items-center justify-evenly">
-                    <div class="box not-shown m-1 w-[15rem]">
-                        <img src="assets/images/descriptions/design.gif" alt="Design" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-3 color-primary">UI & UX</h2>
-                        <p class="info text-sm color-primary">
-                            Creating visually striking designs that resonate with your audience.
-                        </p>
-                    </div>
+                    
                     <div class="box not-shown m-1 w-[15rem]">
                         <img src="assets/images/descriptions/quality.gif" alt="Quality" class="descriptive-icon w-10 h-10 mb-5">
                         <h2 class="text text-lg font-medium mb-3 color-primary">Quality Assurance</h2>
                         <p class="info text-sm color-primary">
                             Ensuring your vision comes to life with top-tier testing standards.
+                        </p>
+                    </div>
+                    <div class="box not-shown m-1 w-[15rem]">
+                        <img src="assets/images/descriptions/documentation.gif" alt="Documentation" class="descriptive-icon w-10 h-10 mb-5">
+                        <h2 class="text text-lg font-medium mb-3 color-primary">Documentation</h2>
+                        <p class="info text-sm color-primary">
+                            Writing clear, concise technical documentation for software and processes.
                         </p>
                     </div>
                 </div>
@@ -193,7 +195,7 @@
 
 
         <!--====== PROJECTS ======-->
-        <section id="projects" class="projects w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
+        <section id="projects" class="projects w-[71.875rem] section container container-padding-1 relative hidden items-center flex-col">
             <h1 class="title-info not-shown mb-14 text-center text-4xl gradient-text">
                 Highlights
             </h1>
@@ -344,7 +346,7 @@
                 </div>
 
                 <h1 class="title not-shown mt-8 text-5xl gradient-text text-center">
-                    Discuss your next<br> project
+                    Have questions?<br> Let's talk
                 </h1>
              </div>
             <!-- action buttons -->
@@ -399,7 +401,8 @@
                 <!-- social links -->
                 <div class="socials flex items-center justify-center text-xl">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="color-primary flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="color-primary flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-stack-overflow-line"></i></a>
+                    <a href="https://github.com/heisdanielade" target="_blank" class="color-primary flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-github-line"></i></a>
+                    <!-- <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="color-primary flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-stack-overflow-line"></i></a> -->
                     <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="color-primary flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a> -->
                 </div>
             </div>
