made minor word changes

--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="content flex items-center justify-center flex-col w-[40rem] pt-2">
                 <h1 class="info not-shown text-center text-5xl mt-20">
-                    <span class="gradient-text">Crafting digital<br> spaces, products and experiences.</span><span class="hht stroke-text-2 hidden">ces.</span>
+                    <span class="gradient-text">Sculpting virtual<br>experiences with<br> pixels & code.</span><span class="hht stroke-text-2 hidden">ces.</span>
                 </h1>
 
                 <div class="location flex items-center justify-center mt-6">
@@ -148,7 +148,7 @@
         <!--====== SERVICES ======-->
         <section id="services" class="services bg-container-desktop w-[71.875rem] section container container-padding-1 relative flex items-center justify-center flex-col">
             <h1 class="title-info not-shown mb-14 text-center text-4xl gradient-text">
-                Creative Solutions
+                Digital Arsenal
             </h1>
             
             <div class="title-stroke-line not-shown top-[10.75rem] z-10 bg-secondary absolute mb-8 w-[70%] h-[0.0325rem]"></div>
@@ -159,17 +159,17 @@
             <div class="serv-con mb-8 flex items-center justify-evenly w-full">
                 <div class="con-1 flex items-center justify-evenly">
                     <div class="box not-shown m-1 w-[15rem]">
-                        <img src="assets/images/descriptions/analytics.gif" alt="Data" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-3 color-primary">Data Analysis</h2>
-                        <p class="info text-sm color-primary">
-                            Insightful and accurate analyses for your needs.
-                        </p>
-                    </div>
-                    <div class="box not-shown m-1 w-[15rem]">
                         <img src="assets/images/descriptions/web.gif" alt="Coding" class="descriptive-icon w-10 h-10 mb-5">
                         <h2 class="text text-lg font-medium mb-3 color-primary">Web Development</h2>
                         <p class="info text-sm color-primary">
                             Turning concepts into outstanding web apps.
+                        </p>
+                    </div>
+                    <div class="box not-shown m-1 w-[15rem]">
+                        <img src="assets/images/descriptions/analytics.gif" alt="Data" class="descriptive-icon w-10 h-10 mb-5">
+                        <h2 class="text text-lg font-medium mb-3 color-primary">Data Analysis</h2>
+                        <p class="info text-sm color-primary">
+                            Insightful and accurate analyses for your needs.
                         </p>
                     </div>
                 </div>
