unused assets deletions

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
         <svg width="400" height="100" xmlns="http://www.w3.org/2000/svg">
             <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-family="Protest Guerrilla" font-size="5.25rem" fill="none" stroke="#242424" stroke-width="1.9" class="loader">
-                H
+                H 
             </text>
         </svg>
 
@@ -57,17 +57,12 @@
                 <div class="mobile hidden items-center text-xl">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
                     <a href="https://github.com/heisdanielade" target="_blank" class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-github-line"></i></a>
-                    <!-- <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-stack-overflow-line"></i></a> -->
-                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a> -->
                 </div>
                 <!-- desktop -->
                 <div class="desktop color-primary text-sm">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">LinkedIn</a>
                     <span class="slash font-bold ml-1 mr-1">/</span>
                     <a href="https://github.com/heisdanielade" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">GitHub</a>
-                    <!-- <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Stack Overflow</a> -->
-                    <!-- <span class="slash font-bold ml-1 mr-1">/</span> -->
-                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Instagram</a> -->
                 </div>
             </div>
         </nav>
@@ -83,7 +78,7 @@
             <div class="profile relative w-40">
                 <!-- home profile image -->
                 <img class="image not-shown relative z-20 w-40 h-40 rounded-full object-cover border-[0.225rem] border-solid" 
-                src="assets/images/me/favicon.png" alt="">
+                src="assets/images/me/favicon.png" alt="Me">
                 
                 <span class="name not-shown color-primary bg-secondary absolute top-8 left-[8rem] font-medium z-30 flex items-center justify-center text-xs rounded-full w-28 pt-4 pb-4 p-3">
                     I'm Daniel &nbsp;👋🏼 
@@ -362,7 +357,7 @@
          </section>
 
 
-        <!--====== SPOKEN LANGUAGES ======-->
+        <!--====== LANGUAGES ======-->
         <div id="languages" class="languages mb-10">
             <div class="holder not-shown w-full flex items-center justify-center cursor-custom">
                 <div class="item bg-transparent color-primary flex items-center justify-evenly w-[7.5rem] p-3 m-1 rounded-full">
@@ -402,8 +397,6 @@
                 <div class="socials flex items-center justify-center text-xl">
                     <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="color-primary flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
                     <a href="https://github.com/heisdanielade" target="_blank" class="color-primary flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-github-line"></i></a>
-                    <!-- <a href="https://stackoverflow.com/users/23490724/daniel" target="_blank" class="color-primary flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-stack-overflow-line"></i></a> -->
-                    <!-- <a href="https://www.instagram.com/heisdanielade/" target="_blank" class="color-primary flex items-center justify-center w-10 h-10 rounded-full"><i class="ri-instagram-line"></i></a> -->
                 </div>
             </div>
          </footer>
