--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
                 <img class="image not-shown relative z-20 w-40 h-40 rounded-full object-cover border-[0.225rem] border-solid" 
                 src="assets/images/me/favicon.png" alt="Me">
                 
-                <span class="name not-shown color-primary bg-secondary absolute top-8 left-[8rem] font-medium z-30 flex items-center justify-center text-xs rounded-full w-28 pt-4 pb-4 p-3">
+                <span class="name not-shown color-primary bg-secondary absolute top-8 left-[8rem] font-medium z-30 flex items-center justify-center text-base rounded-full w-32 pt-4 pb-4 p-3">
                     I'm Daniel &nbsp;👋🏼 
                 </span>
                 <!-- curved arrow -->
@@ -88,7 +88,7 @@
             </div>
             <div class="content flex items-center justify-center flex-col w-[40rem] pt-2">
                 <h1 class="info not-shown text-center text-5xl mt-20">
-                    <span class="gradient-text">Sculpting virtual<br>experiences with<br> pixels & code.</span><span class="hht stroke-text-2 hidden">ces.</span>
+                    <span class="gradient-text">Computer Science<br>&<br> Econometrics student.</span><span class="hht stroke-text-2 hidden">ces.</span>
                 </h1>
 
                 <div class="location flex items-center justify-center mt-6">
