minor ui changes

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="content flex items-center justify-center flex-col w-[40rem] pt-2">
                 <h1 class="info not-shown text-center text-5xl mt-20">
-                    <span class="gradient-text">Computer Science<br>&<br> Econometrics student.</span><span class="hht stroke-text-2 hidden">ces.</span>
+                    <span class="gradient-text">Code. Create. Innovate.<br> Repeat.</span><span class="hht stroke-text-2 hidden">ces.</span>
                 </h1>
 
                 <div class="location flex items-center justify-center mt-6">
@@ -143,31 +143,32 @@
         <!--====== SERVICES ======-->
         <section id="services" class="services bg-container-desktop w-[71.875rem] section container container-padding-1 relative flex items-center justify-center flex-col">
             <h1 class="title-info not-shown mb-14 text-center text-4xl gradient-text">
-                Digital Arsenal
+                Arsenal
             </h1>
-            
-            <div class="title-stroke-line not-shown top-[10.75rem] z-10 bg-secondary absolute mb-8 w-[70%] h-[0.0325rem]"></div>
-            <span class="title relative z-20 color-primary bg-secondary not-shon text-sm w-28 h-12 font-bold rounded-full mb-9 p-2 -border-[0.25rem] -border-solid flex items-center justify-center">
+
+            <div class="title-stroke-line not-shown top-[10.75rem] z-10 bg-primary absolute mb-8 w-[70%] h-[0.0325rem]"></div>
+            <span class="title z-20 color-secondary bg-primary not-shwn text-sm w-28 h-12 font-bold rounded-full mb-12 p-2 -border-[0.25rem] -border-solid flex items-center justify-center">
                 Skillset
             </span>
 
             <div class="serv-con mb-8 flex items-center justify-evenly w-full">
                 <div class="con-1 flex items-center justify-evenly">
                     <div class="box not-shown m-1 w-[15rem]">
+                        <img src="assets/images/descriptions/database.gif" alt="Data" class="descriptive-icon w-10 h-10 mb-5">
+                        <h2 class="text text-lg font-medium mb-3 color-primary">Database Man.</h2>
+                        <p class="info text-sm color-primary">
+                            Skilled in SQL & Database design.
+                        </p>
+                    </div>
+                    <div class="box not-shown m-1 w-[15rem]">
                         <img src="assets/images/descriptions/web.gif" alt="Coding" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-3 color-primary">Web Development</h2>
+                        <h2 class="text text-lg font-medium mb-3 color-primary">Back-end Dev.</h2>
                         <p class="info text-sm color-primary">
                             Turning concepts into outstanding web apps.
                         </p>
                     </div>
-                    <div class="box not-shown m-1 w-[15rem]">
-                        <img src="assets/images/descriptions/analytics.gif" alt="Data" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-3 color-primary">Data Analysis</h2>
-                        <p class="info text-sm color-primary">
-                            Insightful and accurate analyses for your needs.
-                        </p>
-                    </div>
                 </div>
+
                 <div class="con-2 flex items-center justify-evenly">
                     
                     <div class="box not-shown m-1 w-[15rem]">
@@ -181,7 +182,7 @@
                         <img src="assets/images/descriptions/documentation.gif" alt="Documentation" class="descriptive-icon w-10 h-10 mb-5">
                         <h2 class="text text-lg font-medium mb-3 color-primary">Documentation</h2>
                         <p class="info text-sm color-primary">
-                            Writing clear, concise technical documentation for software and processes.
+                            Writing concise technical documentation for software and processes.
                         </p>
                     </div>
                 </div>
@@ -190,7 +191,7 @@
 
 
         <!--====== PROJECTS ======-->
-        <section id="projects" class="projects w-[71.875rem] section container container-padding-1 relative hidden items-center flex-col">
+        <section id="projects" class="projects w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
             <h1 class="title-info not-shown mb-14 text-center text-4xl gradient-text">
                 Highlights
             </h1>
@@ -205,6 +206,7 @@
 
                 <!-- top -->
                 <div class="proj-cont flex items-center justify-normal mb-10">
+
                     <a href="#" target="_blank" class="proj-link not-shown relative rounded-[1rem] mr-8 w-[26.75rem] h-[15.375rem]">
                         <span class="arrow hidden bg-primary z-10 top-0 right-0 w-9 h-9 absolute items-center justify-center">
                             <img src="assets/images/descriptions/arrow.gif" alt="arrow" class="w-7 h-7">
