changed page loader text and modified skillsets

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
         <svg width="400" height="100" xmlns="http://www.w3.org/2000/svg">
             <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-family="Protest Guerrilla" font-size="5.25rem" fill="none" stroke="#242424" stroke-width="1.9" class="loader">
-                H 
+                #
             </text>
         </svg>
 
@@ -72,7 +72,6 @@
     <!--======== MAIN ========-->
     <main class="main overflow-hidden container flex flex-col items-center w-full">
 
-
         <!--====== HOME ======-->
         <section id="home" class="home bg-container-desktop w-[71.875rem] section container container-padding-1 relative flex items-center justify-center flex-col">    
             <div class="profile relative w-40">
@@ -80,7 +79,7 @@
                 <img class="image not-shown relative z-20 w-40 h-40 rounded-full object-cover border-[0.225rem] border-solid" 
                 src="assets/images/me/favicon.png" alt="Me">
                 
-                <span class="name not-shown color-primary bg-secondary absolute top-8 left-[8rem] font-medium z-30 flex items-center justify-center text-base rounded-full w-32 pt-4 pb-4 p-3">
+                <span class="name not-shown color-primary bg-secondary text-[0.875em] absolute top-8 left-[8rem] font-medium z-30 flex items-center justify-center rounded-full w-32 pt-4 pb-4 p-3">
                     I'm Daniel &nbsp;👋🏼 
                 </span>
                 <!-- curved arrow -->
@@ -155,34 +154,33 @@
                 <div class="con-1 flex items-center justify-evenly">
                     <div class="box not-shown m-1 w-[15rem]">
                         <img src="assets/images/descriptions/database.gif" alt="Data" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-3 color-primary">Database Man.</h2>
+                        <h2 class="text text-lg font-medium mb-3 color-primary">Databases</h2>
                         <p class="info text-sm color-primary">
-                            Skilled in SQL & Database design.
+                            Proficient in SQL and Database design.
                         </p>
                     </div>
                     <div class="box not-shown m-1 w-[15rem]">
                         <img src="assets/images/descriptions/web.gif" alt="Coding" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-3 color-primary">Back-end Dev.</h2>
+                        <h2 class="text text-lg font-medium mb-3 color-primary">Back-end</h2>
                         <p class="info text-sm color-primary">
-                            Turning concepts into outstanding web apps.
+                            Building reliable server-side applications.
                         </p>
                     </div>
                 </div>
 
                 <div class="con-2 flex items-center justify-evenly">
-                    
                     <div class="box not-shown m-1 w-[15rem]">
                         <img src="assets/images/descriptions/quality.gif" alt="Quality" class="descriptive-icon w-10 h-10 mb-5">
-                        <h2 class="text text-lg font-medium mb-3 color-primary">Quality Assurance</h2>
+                        <h2 class="text text-lg font-medium mb-3 color-primary">QA</h2>
                         <p class="info text-sm color-primary">
-                            Ensuring your vision comes to life with top-tier testing standards.
+                            Ensuring software quality and reliability.
                         </p>
                     </div>
                     <div class="box not-shown m-1 w-[15rem]">
                         <img src="assets/images/descriptions/documentation.gif" alt="Documentation" class="descriptive-icon w-10 h-10 mb-5">
                         <h2 class="text text-lg font-medium mb-3 color-primary">Documentation</h2>
                         <p class="info text-sm color-primary">
-                            Writing concise technical documentation for software and processes.
+                            Creating clear and concise technical documentation.
                         </p>
                     </div>
                 </div>
