added minor changes

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio website for Daniel Adediran - heisdanielade">
-    <meta name="keywords" content="heisdanielade, data analyst, developer, poland, javascript, polish, zielona góra, software engineer, uz">
+    <meta name="keywords" content="heisdanielade, java, developer, poland, javascript, polish, zielona góra, software engineer, uz">
     <meta name="author" content="Daniel Adediran">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Portfolio | heisdanielade">
@@ -346,13 +346,13 @@
              </div>
             <!-- action buttons -->
             <div class="actions not-shown flex items-center justify-center mt-12 text-xs font-medium">
+
+
                 <a href="mailto:danieladeofficial@gmail.com" target="_blank" class="color-secondary bg-primary flex items-center justify-center w-24 h-12 rounded-full mr-2 p-2">
                     <i class="ri-mail-send-line mr-2"></i>
                     <span>Email</span>
                 </a>
-                <a href="https://wa.link/dghhti" target="_blank" class="color-primary bg-secondary flex items-center justify-center border-[0.25rem] border-solid w-24 h-12 rounded-full p-2">
-                    WhatsApp
-                </a>
+
             </div>
          </section>
 
